add identity database context

--- a/mLingoCore/mLingoCore.csproj
+++ b/mLingoCore/mLingoCore.csproj
@@ -10,4 +10,12 @@
     </Reference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="NTextCat" Version="0.2.1.30" />
+  </ItemGroup>
+
 </Project>
