configured database for identity

--- a/mLingo/appsettings.json
+++ b/mLingo/appsettings.json
@@ -1,8 +1,11 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost; Port=5433;Database=mLingo; User Id=postgres; Password=postgres;"
+  }, 
   "Logging": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-"AllowedHosts": "*"
+    "LogLevel": {
+      "Default": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
 }
