--- a/mLingo/ClientApp/package.json
+++ b/mLingo/ClientApp/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.11.1",
+    "netlify-lambda": "^1.6.3",
     "typescript": "^3.5.2"
   },
   "eslintConfig": {
