Adjust controllers for swagger documentation

--- a/mLingo/mLingo.csproj
+++ b/mLingo/mLingo.csproj
@@ -9,6 +9,8 @@
     <DefaultItemExcludes>$(DefaultItemExcludes);$(SpaRoot)node_modules\**</DefaultItemExcludes>
     <UserSecretsId>e6505cf5-6f77-4297-bb52-01bfef84ebfe</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
