--- a/mLingo/ClientApp/package.json
+++ b/mLingo/ClientApp/package.json
@@ -26,17 +26,20 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.11.1",
-    "typescript": "^3.5.2"
+    "typescript": "^3.5.2",
+    "webpack-cli": "^3.3.11"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
   "scripts": {
-    "start": "rimraf ./build && react-scripts start",
+    "start": "rimraf ./build && react-scripts start && ./development",
     "build": "react-scripts build",
     "test": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint ./src/"
+    "lint": "eslint ./src/",
+    "development": "webpack --mode development",
+    "production": "webpack --mode production"
   },
   "browserslist": {
     "production": [
