--- a/mLingo/ClientApp/public/manifest.json
+++ b/mLingo/ClientApp/public/manifest.json
@@ -3,27 +3,27 @@
   "name": "mLingo",
   "icons": [
     {
-      "src": "/public/icons/icon72x72.png",
+      "src": "/icons/icon72x72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "/public/icons/icon96x96.png",
+      "src": "/icons/icon96x96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "/public/icons/icon144x144.png",
+      "src": "/icons/icon144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "/public/icons/icon192x192.png",
+      "src": "/icons/icon192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/public/icons/icon512x512.png",
+      "src": "/icons/icon512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
