--- a/mLingo/ClientApp/package.json
+++ b/mLingo/ClientApp/package.json
@@ -6,6 +6,7 @@
     "babel-eslint": "10.0.3",
     "bootstrap": "^4.1.3",
     "formik": "^2.1.5",
+    "gsap": "^3.4.2",
     "jquery": "^3.5.1",
     "merge": "^1.2.1",
     "oidc-client": "^1.9.0",
