--- a/mLingo/ClientApp/package.json
+++ b/mLingo/ClientApp/package.json
@@ -1,43 +1,55 @@
 {
-  "name": "mlingo",
-  "version": "0.1.0",
+  "name": "mLingo",
+  "version": "0.0.9",
   "private": true,
   "dependencies": {
-    "babel-eslint": "10.0.3",
-    "bootstrap": "^4.1.3",
-    "formik": "^2.1.5",
-    "gsap": "^3.4.2",
-    "jquery": "^3.5.1",
+    "babel-eslint": "10.1.0",
+    "babel-loader": "^8.1.0",
+    "bootstrap": "^4.6.0",
+    "formik": "^2.2.6",
+    "gsap": "^3.6.0",
+    "jquery": "^3.6.0",
     "merge": "^1.2.1",
-    "oidc-client": "^1.9.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-icons": "^3.9.0",
+    "oidc-client": "^1.11.5",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-icons": "^3.11.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^3.4.4",
     "reactstrap": "^6.3.0",
     "rimraf": "^2.6.2",
+    "sass": "^1.32.8",
+    "webpack": "^4.42.0",
     "yup": "^0.29.3"
   },
   "devDependencies": {
-    "ajv": "^6.9.1",
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
+    "@webpack-cli/init": "^1.1.3",
+    "ajv": "^6.12.6",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "cross-env": "^5.2.0",
+    "css-loader": "^5.1.2",
     "eslint": "^6.6.0",
     "eslint-config-react-app": "^4.0.1",
     "eslint-plugin-flowtype": "^2.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.11.1",
-    "typescript": "^3.5.2",
-    "webpack-cli": "^3.3.11"
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "mini-css-extract-plugin": "^1.3.9",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
+    "typescript": "^3.9.9",
+    "webpack-cli": "^4.5.0",
+    "workbox-webpack-plugin": "^6.1.1"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
   "scripts": {
     "start": "rimraf ./build && react-scripts start && ./development",
-    "build": "react-scripts build",
+    "build": "webpack",
     "test": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint ./src/",
@@ -55,5 +67,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "My webpack project"
 }
