--- a/mLingo/ClientApp/package.json
+++ b/mLingo/ClientApp/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "^3.4.4",
     "reactstrap": "^6.3.0",
+    "recharts": "^2.0.8",
     "rimraf": "^2.6.2",
     "sass": "^1.32.8",
     "webpack": "^4.42.0",
