--- a/mLingo/appsettings.json
+++ b/mLingo/appsettings.json
@@ -17,7 +17,7 @@
 
   "SuperUser": {
     "username": "mLingoTeam",
-    "password": "mLingoteamisth3best!" 
+    "password": "Mlingo202!" 
   },
 
   "AllowedHosts": "*"
