--- a/mLingo/ClientApp/package.json
+++ b/mLingo/ClientApp/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.9",
   "private": true,
   "dependencies": {
+    "@babel/preset-react": "^7.12.13",
+    "@babel/runtime": "^7.13.10",
     "babel-eslint": "10.1.0",
     "babel-loader": "^8.1.0",
     "bootstrap": "^4.6.0",
@@ -19,13 +21,17 @@
     "react-scripts": "^3.4.4",
     "reactstrap": "^6.5.0",
     "recharts": "^2.0.8",
+    "regenerator-runtime": "^0.13.7",
     "rimraf": "^2.6.2",
     "sass": "^1.32.8",
     "webpack": "^4.42.0",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.7.3",
     "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
+    "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.13.10",
     "@webpack-cli/init": "^1.1.3",
     "ajv": "^6.12.6",
@@ -39,7 +45,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "mini-css-extract-plugin": "^1.3.9",
-    "sass-loader": "^11.0.1",
+    "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
     "typescript": "^3.9.9",
     "webpack-cli": "^4.5.0",
@@ -50,12 +56,9 @@
   },
   "scripts": {
     "start": "rimraf ./build && react-scripts start && ./development",
-    "build": "webpack",
-    "test": "cross-env CI=true react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "lint": "eslint ./src/",
-    "development": "webpack --mode development",
-    "production": "webpack --mode production"
+    "build": "webpack --mode production --config webpack.prod.js",
+    "dev": "webpack --mode development --config webpack.dev.js",
+    "prod": "webpack serve --mode production --config webpack.prod.js"
   },
   "browserslist": {
     "production": [
